--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
-    "puppeteer": "^23.5.0"
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^23.5.0"
   }
 }
